[build-system]
requires = ["setuptools","wheel"]

[project]
name = "seafobj"
version = "12.0.14"
description = "Python library for accessing seafile data model"
authors = [
    {name = "Seafile Ltd.", email = "info@seafile.com"}
]
dependencies = [
    "boto3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache2"}

[project.urls]
Homepage = "https://seafile.com"
Repository = "https://github.com/haiwen/seafobj"

[tool.setuptools.packages.find]
exclude=["test.*", "test"]
namespaces = false
